styles y html modificados para hacerlo responsive

--- a/views/index.html
+++ b/views/index.html
@@ -66,9 +66,14 @@
             <button class="but-menu"><i class="fa-solid fa-bars"></i></button>
         </div>
 
+       
+        
     </header>
 
+    <img class="banner" src="/images/img-home-banner.jpg" alt="Banner">
+
     <main>
+        
         <section>
             <div class="titulares">
                 <h3>Basado en tu última visita</h3>
@@ -189,7 +194,7 @@
         </section>
 
         <section>
-            <i class="fa-solid fa-gift-card footer-icon"></i>
+            <i class="fa-solid fa-gift footer-icon"></i>
             <h3 class="titulos-footer">Envío gratis desde $ 2.500</h3>
             <p class="textos-footer">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
                 Mercado Puntos.</p>
@@ -201,8 +206,6 @@
             <p class="textos-footer">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre
                 protegid@.</p>
         </section>
-
-        <br>
 
         <p id="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </footer>
