--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,7 @@ header {
     font-size: 12px; 
     background-color: #EAC926;
     color: black;
+    padding-bottom: 0px;
 }
 
 .div-logo {
@@ -32,6 +33,9 @@ header {
     padding-top: 15px;
 }
 
+nav {
+    padding-bottom: 15px;
+}
 nav ul {
     list-style: none;
     padding-left: 0px;
@@ -45,7 +49,7 @@ li a {
 .div-menu {
     text-align: center;
     padding-bottom: 20px; 
-    padding-top: 15px;  
+   /* padding-top: 15px;  */
 }
 
 .but-menu {
@@ -56,11 +60,17 @@ li a {
     size: 30px;
 }
 
+.banner {
+    width: 100%;
+    margin-bottom: 0px;
+}
+
 main {
     font-family: 'Roboto', sans-serif; 
     font-size: 12px; 
     width: 90%;
     margin: auto;
+
 }
 
 section {
@@ -128,23 +138,28 @@ h3 {
 footer {
     font-family: 'Roboto', sans-serif; 
     margin-top: 20px;
+    background-color: white;
+    padding: 10px 0;
 }
 
 footer section {
     text-align:center;
+    padding: 10px 40px;
 }
 
 .titulos-footer {
     color:#666;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: bold;
     text-align: center;
+    margin: 0;
 }
 
 .textos-footer {
     color:#666;
     font-size: 10px;
     text-align: center;
+    margin: 0;
 }
 
 .footer-icon {
@@ -156,6 +171,25 @@ footer section {
 #copyright {
     font-size: 8px;
     color: #666;
+    margin: 30px 10px;
 }
 
+/* Tablets */
 
+@media (min-width : 361px) {
+    .descripciones {
+        display: block;
+    }
+
+    nav ul {
+        display: block;
+    }
+
+    .div-menu {
+        display: none;
+    }
+
+    article {
+        box-shadow : 0px 0px 10px rgb(100, 100, 100 );
+    }
+}
