mejorado según video de clase 14

--- a/views/index.html
+++ b/views/index.html
@@ -62,15 +62,11 @@
             </ul>
         </nav>
         
-        <div class="div-menu">
-            <button class="but-menu"><i class="fa-solid fa-bars"></i></button>
-        </div>
-
-       
+        <a href="#" class="but-menu"><i class="fa-solid fa-bars"></i></a>
+        
+        <img class="banner" src="/images/img-home-banner.jpg" alt="Banner">
         
     </header>
-
-    <img class="banner" src="/images/img-home-banner.jpg" alt="Banner">
 
     <main>
         
