--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,27 +1,29 @@
+* {
+    box-sizing: border-box;
+}
+    
 body {
+    font-family: 'Roboto', sans-serif; 
+    font-size: 12px; 
     background-color: #ebebeb;
 }
 
 header {
-    font-family: 'Roboto', sans-serif; 
-    font-size: 12px; 
     background-color: #EAC926;
     color: black;
-    padding-bottom: 0px;
+    padding: 20px 0 0 0;
 }
 
 .div-logo {
-    padding-top: 20px;
-    padding-bottom: 10px;
-    padding-left: 15px;
+    margin: 10px 20px;
 }
 
 .logo {
-    width: 30%;
+    width: 40%;
 }
 
 .barra-busqueda {
-    padding-left:15px;
+    margin: 10px 20px;
 }
 
 .boton-busqueda {
@@ -30,15 +32,17 @@ header {
 
 .compra-cuotas {
     text-align: center;
-    padding-top: 15px;
+    margin: 10px 20px;
+    font-weight: 400;
 }
 
 nav {
-    padding-bottom: 15px;
+    margin: 15px 20px;
 }
+
 nav ul {
     list-style: none;
-    padding-left: 0px;
+    padding: 0px;
     display: none;
 }
 
@@ -46,28 +50,25 @@ li a {
     color:black;
 }
 
-.div-menu {
-    text-align: center;
-    padding-bottom: 20px; 
-   /* padding-top: 15px;  */
-}
-
 .but-menu {
-    background-color: blue;
+    background-color: #03264C;
     color:white;
-    border-radius: 5px;
-    padding: 6px;
-    size: 30px;
+    display: block;
+    border-radius: 8px;
+    padding: 6px 0;
+    max-width: 30px;
+    text-align: center;
+    margin: auto;
 }
 
 .banner {
+    display: block;
     width: 100%;
-    margin-bottom: 0px;
+    margin: 0;
+    padding: 0;
 }
 
 main {
-    font-family: 'Roboto', sans-serif; 
-    font-size: 12px; 
     width: 90%;
     margin: auto;
 
@@ -136,7 +137,6 @@ h3 {
 }
 
 footer {
-    font-family: 'Roboto', sans-serif; 
     margin-top: 20px;
     background-color: white;
     padding: 10px 0;
@@ -185,7 +185,7 @@ footer section {
         display: block;
     }
 
-    .div-menu {
+    .but-menu {
         display: none;
     }
 
