--- a/views/index.html
+++ b/views/index.html
@@ -21,21 +21,23 @@
 
     <header>
 
-        <div class="div-logo">
-            <img class="logo" src="/images/logo-mercado-liebre.svg" alt="Logo de ML">        
-        </div>
+        <div class="main-header">
+            <div class="div-logo">
+                <img class="logo" src="/images/logo-mercado-liebre.svg" alt="Logo de ML">        
+            </div>
 
-        <div class="barra-busqueda">
-            <form>
-                <input type="text" placeholder="Buscar productos, marcas" style= "width: 150px; height: 13px">
-            </form>
-             
-            <button class="boton-busqueda"><i class="fa-solid fa-magnifying-glass"></i></button>
-        </div>
+            <div class="barra-busqueda">
+                <form>
+                    <input type="text" placeholder="Buscar productos, marcas" style= "width: 150px; height: 13px">
+                </form>
+                
+                <button class="boton-busqueda"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
 
-        <div class="compra-cuotas">
-            <i class="fa-solid fa-hand-holding-dollar"></i>
-            <span>Comprá en cuotas y sin tarjeta de crédito</span>
+            <div class="compra-cuotas">
+                <i class="fa-solid fa-hand-holding-dollar"></i>
+                <span>Comprá en cuotas y sin tarjeta de crédito</span>
+            </div>
         </div>
 
         <nav>
