--- a/views/index.html
+++ b/views/index.html
@@ -80,48 +80,56 @@
             <article>
                 <img class="imagen", src="/images/img-cafetera-moulinex.jpg" , alt="Cafetera Moulinex">
                 <div class="div-articulo">
-                    <div class="div-camion">
-                        <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <i class="fa-solid fa-truck icono-camion"></i>
+
+                    <div class="datos-articulo">
+                        <p class="precios">$6.770</p>
+                        <p class="descuentos">40% OFF</p>
+                        <p class="descripciones">Cafetera Moulinex</p>
                     </div>
-                    <p class="precios">$6.770</p>
-                    <p class="descuentos">40% OFF</p>
-                    <p class="descripciones">Cafetera Moulinex</p>
                 </div>
             </article>
 
             <article>
                 <img  class="imagen", src="/images/img-macbook-pro-2019.jpg" , alt="Macbook Pro" width="340px">
                 <div class="div-articulo">                    
-                    <div class="div-camion">
-                        <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <div class="datos-articulo">
+                        <p class="precios">$230.000</p>
+                        <p class="descuentos">20% OFF</p>
+                        <p class="descripciones">Macbook Pro</p>
                     </div>
-                    <p class="precios">$230.000</p>
-                    <p class="descuentos">20% OFF</p>
-                    <p class="descripciones">Macbook Pro</p>
                 </div>
             </article>
 
             <article>
                 <img  class="imagen", src="/images/img-samsung-galaxy-s10.jpg" , alt="Samsung Galaxy S10" width="340px">
                 <div class="div-articulo">
-                    <div class="div-camion">
-                        <i class="fa-solid fa-truck icono-camion"></i>
-                    </div>                    
-                    <p class="precios">$70.500</p>
-                    <p class="descuentos">10% OFF</p>
-                    <p class="descripciones">Samsung Galaxy S10</p>
+                    
+                    <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <div class="datos-articulo">                    
+                        <p class="precios">$70.500</p>
+                        <p class="descuentos">10% OFF</p>
+                        <p class="descripciones">Samsung Galaxy S10</p>
+                    </div>
                 </div>
             </article>
 
             <article>
                 <img  class="imagen", src="/images/img-tv-samsung-smart.jpg" , alt="Samsung Smart TV" width="340px">
                 <div class="div-articulo">
-                    <div class="div-camion">
-                        <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <div class="datos-articulo">
+                        <p class="precios">$23.340px</p>
+                        <p class="descuentos">5% OFF</p>
+                        <p class="descripciones">Smart TV Samsung 43"</p>
                     </div>
-                    <p class="precios">$23.340px</p>
-                    <p class="descuentos">5% OFF</p>
-                    <p class="descripciones">Smart TV Samsung 43"</p>
                 </div>
             </article>
         </section>
@@ -134,48 +142,56 @@
             <article>
                 <img  class="imagen", src="/images/img-cafetera-moulinex.jpg" , alt="Cafetera Moulinex" width="340px">
                 <div class="div-articulo">
-                    <div class="div-camion">
-                        <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <div class="datos-articulo">
+                        <p class="precios">$6.770</p>
+                        <p class="descuentos">40% OFF</p>
+                        <p class="descripciones">Cafetera Moulinex</p>
                     </div>
-                   <p class="precios">$6.770</p>
-                    <p class="descuentos">40% OFF</p>
-                    <p class="descripciones">Cafetera Moulinex</p>
                 </div>
             </article>
 
             <article>
                 <img  class="imagen", src="/images/img-macbook-pro-2019.jpg" , alt="Macbook Pro" width="340px">
                 <div class="div-articulo">
-                    <div class="div-camion">
-                        <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <div class="datos-articulo">
+                        <p class="precios">$230.000</p>
+                        <p class="descuentos">20% OFF</p>
+                        <p class="descripciones">Macbook Pro</p>
                     </div>
-                    <p class="precios">$230.000</p>
-                    <p class="descuentos">20% OFF</p>
-                    <p class="descripciones">Macbook Pro</p>
                 </div>
             </article>
 
             <article>
                 <img  class="imagen", src="/images/img-samsung-galaxy-s10.jpg" , alt="Samsung Galaxy S10" width="340px">
                 <div class="div-articulo">
-                    <div class="div-camion">
-                        <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <div class="datos-articulo">
+                        <p class="precios">$70.500</p>
+                        <p class="descuentos">10% OFF</p>
+                        <p class="descripciones">Samsung Galaxy S10</p>
                     </div>
-                    <p class="precios">$70.500</p>
-                    <p class="descuentos">10% OFF</p>
-                    <p class="descripciones">Samsung Galaxy S10</p>
                 </div>
             </article>
 
             <article>
                 <img  class="imagen", src="/images/img-tv-samsung-smart.jpg" , alt="Samsung Smart TV" width="340px">
                 <div class="div-articulo">
-                    <div class="div-camion">
-                        <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <i class="fa-solid fa-truck icono-camion"></i>
+                    
+                    <div class="datos-articulo">
+                        <p class="precios">$23.340px</p>
+                        <p class="descuentos">5% OFF</p>
+                        <p class="descripciones">Smart TV Samsung 43"</p>
                     </div>
-                    <p class="precios">$23.340px</p>
-                    <p class="descuentos">5% OFF</p>
-                    <p class="descripciones">Smart TV Samsung 43"</p>
                 </div>
             </article>
         </section>        
