--- a/views/index.html
+++ b/views/index.html
@@ -33,11 +33,11 @@
                 
                 <button class="boton-busqueda"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
+        </div>
 
-            <div class="compra-cuotas">
-                <i class="fa-solid fa-hand-holding-dollar"></i>
-                <span>Comprá en cuotas y sin tarjeta de crédito</span>
-            </div>
+        <div class="compra-cuotas">
+            <i class="fa-solid fa-hand-holding-dollar"></i>
+            <span>Comprá en cuotas y sin tarjeta de crédito</span>
         </div>
 
         <nav>
@@ -73,65 +73,81 @@
     <main>
         
         <section>
+
             <div class="titulares">
                 <h3>Basado en tu última visita</h3>
             </div>
 
-            <article>
-                <img class="imagen", src="/images/img-cafetera-moulinex.jpg" , alt="Cafetera Moulinex">
-                <div class="div-articulo">
-                    
-                    <i class="fa-solid fa-truck icono-camion"></i>
+            <div class="group-articles">
 
-                    <div class="datos-articulo">
-                        <p class="precios">$6.770</p>
-                        <p class="descuentos">40% OFF</p>
-                        <p class="descripciones">Cafetera Moulinex</p>
-                    </div>
-                </div>
-            </article>
+                <article>
+                    <img class="imagen", src="/images/img-cafetera-moulinex.jpg" , alt="Cafetera Moulinex">
 
-            <article>
-                <img  class="imagen", src="/images/img-macbook-pro-2019.jpg" , alt="Macbook Pro" width="340px">
-                <div class="div-articulo">                    
-                    
-                    <i class="fa-solid fa-truck icono-camion"></i>
-                    
-                    <div class="datos-articulo">
-                        <p class="precios">$230.000</p>
-                        <p class="descuentos">20% OFF</p>
-                        <p class="descripciones">Macbook Pro</p>
-                    </div>
-                </div>
-            </article>
+                    <div class="div-articulo">
+                        
+                        <i class="fa-solid fa-truck icono-camion"></i>
 
-            <article>
-                <img  class="imagen", src="/images/img-samsung-galaxy-s10.jpg" , alt="Samsung Galaxy S10" width="340px">
-                <div class="div-articulo">
-                    
-                    <i class="fa-solid fa-truck icono-camion"></i>
-                    
-                    <div class="datos-articulo">                    
-                        <p class="precios">$70.500</p>
-                        <p class="descuentos">10% OFF</p>
-                        <p class="descripciones">Samsung Galaxy S10</p>
-                    </div>
-                </div>
-            </article>
+                        <div class="datos-articulo">
+                            <p class="precios">$6.770</p>
+                            <p class="descuentos">40% OFF</p>
+                            <p class="descripciones">Cafetera Moulinex</p>
+                        </div>
 
-            <article>
-                <img  class="imagen", src="/images/img-tv-samsung-smart.jpg" , alt="Samsung Smart TV" width="340px">
-                <div class="div-articulo">
-                    
-                    <i class="fa-solid fa-truck icono-camion"></i>
-                    
-                    <div class="datos-articulo">
-                        <p class="precios">$23.340px</p>
-                        <p class="descuentos">5% OFF</p>
-                        <p class="descripciones">Smart TV Samsung 43"</p>
                     </div>
-                </div>
-            </article>
+                </article>
+
+                <article>
+
+                    <img  class="imagen", src="/images/img-macbook-pro-2019.jpg" , alt="Macbook Pro" width="340px">
+
+                    <div class="div-articulo">                    
+                        
+                        <i class="fa-solid fa-truck icono-camion"></i>
+                        
+                        <div class="datos-articulo">
+                            <p class="precios">$230.000</p>
+                            <p class="descuentos">20% OFF</p>
+                            <p class="descripciones">Macbook Pro</p>
+                        </div>
+
+                    </div>
+                </article>
+
+                <article>
+
+                    <img  class="imagen", src="/images/img-samsung-galaxy-s10.jpg" , alt="Samsung Galaxy S10" width="340px">
+
+                    <div class="div-articulo">
+                        
+                        <i class="fa-solid fa-truck icono-camion"></i>
+                        
+                        <div class="datos-articulo">                    
+                            <p class="precios">$70.500</p>
+                            <p class="descuentos">10% OFF</p>
+                            <p class="descripciones">Samsung Galaxy S10</p>
+                        </div>
+
+                    </div>
+                </article>
+
+                <article>
+                    
+                    <img  class="imagen", src="/images/img-tv-samsung-smart.jpg" , alt="Samsung Smart TV" width="340px">
+
+                    <div class="div-articulo">
+                        
+                        <i class="fa-solid fa-truck icono-camion"></i>
+                        
+                        <div class="datos-articulo">
+                            <p class="precios">$23.340</p>
+                            <p class="descuentos">5% OFF</p>
+                            <p class="descripciones">Smart TV Samsung 43"</p>
+                        </div>
+                        
+                    </div>
+                    
+                </article>
+            </div>
         </section>
 
         <section>
@@ -139,67 +155,80 @@
                 <h3>Ofertas</h3>
             </div>
 
-            <article>
-                <img  class="imagen", src="/images/img-cafetera-moulinex.jpg" , alt="Cafetera Moulinex" width="340px">
-                <div class="div-articulo">
-                    
-                    <i class="fa-solid fa-truck icono-camion"></i>
-                    
-                    <div class="datos-articulo">
-                        <p class="precios">$6.770</p>
-                        <p class="descuentos">40% OFF</p>
-                        <p class="descripciones">Cafetera Moulinex</p>
-                    </div>
-                </div>
-            </article>
+            <div class="group-articles">
 
-            <article>
-                <img  class="imagen", src="/images/img-macbook-pro-2019.jpg" , alt="Macbook Pro" width="340px">
-                <div class="div-articulo">
-                    
-                    <i class="fa-solid fa-truck icono-camion"></i>
-                    
-                    <div class="datos-articulo">
-                        <p class="precios">$230.000</p>
-                        <p class="descuentos">20% OFF</p>
-                        <p class="descripciones">Macbook Pro</p>
-                    </div>
-                </div>
-            </article>
+                <article>
 
-            <article>
-                <img  class="imagen", src="/images/img-samsung-galaxy-s10.jpg" , alt="Samsung Galaxy S10" width="340px">
-                <div class="div-articulo">
-                    
-                    <i class="fa-solid fa-truck icono-camion"></i>
-                    
-                    <div class="datos-articulo">
-                        <p class="precios">$70.500</p>
-                        <p class="descuentos">10% OFF</p>
-                        <p class="descripciones">Samsung Galaxy S10</p>
-                    </div>
-                </div>
-            </article>
+                    <img  class="imagen", src="/images/img-cafetera-moulinex.jpg" , alt="Cafetera Moulinex" width="340px">
 
-            <article>
-                <img  class="imagen", src="/images/img-tv-samsung-smart.jpg" , alt="Samsung Smart TV" width="340px">
-                <div class="div-articulo">
-                    
-                    <i class="fa-solid fa-truck icono-camion"></i>
-                    
-                    <div class="datos-articulo">
-                        <p class="precios">$23.340px</p>
-                        <p class="descuentos">5% OFF</p>
-                        <p class="descripciones">Smart TV Samsung 43"</p>
+                    <div class="div-articulo">
+                        
+                        <i class="fa-solid fa-truck icono-camion"></i>
+                        
+                        <div class="datos-articulo">
+                            <p class="precios">$6.770</p>
+                            <p class="descuentos">40% OFF</p>
+                            <p class="descripciones">Cafetera Moulinex</p>
+                        </div>
+
                     </div>
-                </div>
-            </article>
+                </article>
+
+                <article>
+
+                    <img  class="imagen", src="/images/img-macbook-pro-2019.jpg" , alt="Macbook Pro" width="340px">
+
+                    <div class="div-articulo">
+                        
+                        <i class="fa-solid fa-truck icono-camion"></i>
+                        
+                        <div class="datos-articulo">
+                            <p class="precios">$230.000</p>
+                            <p class="descuentos">20% OFF</p>
+                            <p class="descripciones">Macbook Pro</p>
+                        </div>
+
+                    </div>
+                </article>
+
+                <article>
+
+                    <img  class="imagen", src="/images/img-samsung-galaxy-s10.jpg" , alt="Samsung Galaxy S10" width="340px">
+
+                    <div class="div-articulo">
+                        
+                        <i class="fa-solid fa-truck icono-camion"></i>
+                        
+                        <div class="datos-articulo">
+                            <p class="precios">$70.500</p>
+                            <p class="descuentos">10% OFF</p>
+                            <p class="descripciones">Samsung Galaxy S10</p>
+                        </div>
+
+                    </div>
+                </article>
+
+                <article>
+
+                    <img  class="imagen", src="/images/img-tv-samsung-smart.jpg" , alt="Samsung Smart TV" width="340px">
+
+                    <div class="div-articulo">
+                        
+                        <i class="fa-solid fa-truck icono-camion"></i>
+                        
+                        <div class="datos-articulo">
+                            <p class="precios">$23.340</p>
+                            <p class="descuentos">5% OFF</p>
+                            <p class="descripciones">Smart TV Samsung 43"</p>
+                        </div>
+
+                    </div>
+                </article>
+            </div>
         </section>        
     </main>
 
-    <br>
-
-    <footer>
+     <footer>
         <section>
             <i class="fa-solid fa-credit-card footer-icon"></i>
             <h3 class="titulos-footer">Pagá con tarjeta o en efectivo</h3>
