--- a/views/index.html
+++ b/views/index.html
@@ -21,23 +21,24 @@
 
     <header>
 
-        <div class="main-header">
-            <div class="div-logo">
-                <img class="logo" src="/images/logo-mercado-liebre.svg" alt="Logo de ML">        
-            </div>
+        <div class="header-ppal">
 
-            <div class="barra-busqueda">
-                <form>
-                    <input type="text" placeholder="Buscar productos, marcas" style= "width: 150px; height: 13px">
+            <div class="logo-busqueda">
+                
+                <img class="logo" src="/images/logo-mercado-liebre.svg" alt="Logo de ML">        
+                
+                <form class="form-busqueda">
+                    <input class="input-busqueda" type="text" placeholder="Buscar productos, marcas" >
+
+                    <button class="boton-busqueda"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
                 
-                <button class="boton-busqueda"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
-        </div>
 
-        <div class="compra-cuotas">
-            <i class="fa-solid fa-hand-holding-dollar"></i>
-            <span>Comprá en cuotas y sin tarjeta de crédito</span>
+            <div class="compra-cuotas">
+                <i class="fa-solid fa-hand-holding-dollar"></i>
+                <span>Comprá en cuotas y sin tarjeta de crédito</span>
+            </div>
         </div>
 
         <nav>
@@ -64,7 +65,7 @@
             </ul>
         </nav>
         
-        <a href="#" class="but-menu"><i class="fa-solid fa-bars"></i></a>
+        <a href="#" class="boton-menu"><i class="fa-solid fa-bars"></i></a>
         
         <img class="banner" src="/images/img-home-banner.jpg" alt="Banner">
         
