--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -210,6 +210,51 @@ footer section {
     margin: 30px 10px 5px;
 }
 
+.form-crear-producto {
+    padding: 15px;
+}
+
+.div-control {
+    padding-bottom: 15px;
+}
+
+.label-control {
+    display:block;
+    font-weight: 500;
+    font-style: italic;
+}
+
+.label-enOferta {
+    font-weight: 500;
+    font-style: italic;
+    margin-right: 5px;
+}
+
+.control {
+    width: 100%;  
+    border-radius: 3px;
+    border: 1px #666 solid;
+
+}
+.div-botones {
+    text-align: center;
+    margin-top: 40px;
+}
+
+.div-botones button {
+    margin: 5px;
+    background-color:#EAC926;
+    color:#666;
+    border: 1px #666 solid;
+    border-radius: 3px;
+}
+
+.h4-titulo {
+    padding: 15px;
+    font-size: 18px;
+    font-weight: 500px;
+    color: #666;
+}
 /* Tablets */
 
 @media (min-width : 361px) {
