--- a/views/index.html
+++ b/views/index.html
@@ -53,11 +53,11 @@
 
             <ul>
                 <li>
-                    <a>Creá tu cuenta</a>
+                    <a href="/register">Creá tu cuenta</a>
                     <i class="fa-solid fa-id-card"></i>
                 </li>
                 <li>
-                    <a href='#'>Ingresá</a>
+                    <a href='/login'>Ingresá</a>
                     <i class="fa-solid fa-arrow-right-to-bracket"></i>
                 </li>
                 <li>
