--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,7 +24,20 @@ header {
 .logo {
     width: 50%;
     padding: 0 0 0 30px;
+    /*animation-name: aumento;
+    animation-duration: 0.5s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;*/
 }
+
+/*@keyframes aumento {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.1);
+    }
+}*/
 
 .form-busqueda {
    width: 50%;
