--- a/views/register.html
+++ b/views/register.html
@@ -67,12 +67,12 @@
         
         <a href="#" class="boton-menu"><i class="fa-solid fa-bars"></i></a>
         
-        <img class="banner" src="/images/img-home-banner.jpg" alt="Banner">
+        <!--img class="banner" src="/images/img-home-banner.jpg" alt="Banner"-->
         
     </header>
 
     <main>
-        <h4 class="h4-titulo-registro">Formulario de registro</h4>
+        <!--h4 class="h4-titulo-registro">Formulario de registro</h4-->
     <!-- Formulario -->
         <form action="/home" method="" class="form-registro">
 
@@ -169,6 +169,12 @@
 
             </div>
         </form>
+
+        <div class="div-promo">
+            <img src="/images/avion.jpg" class="img-promo">
+
+            <h4 class="h4-promo">¡Comprá hoy y participá en un sorteo por 2 pasajes a Miami!</h4>
+        </div>
 
     </main>
     
