--- a/public/css/form-styles.css
+++ b/public/css/form-styles.css
@@ -1,5 +1,13 @@
+header {
+    padding-bottom: 20px;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+}
+
 .form-registro {
     padding: 25px;
+    margin-top: 194px;
 }
 
 .form-login {
@@ -93,4 +101,30 @@
     color:white;
     width: 100%;
     height: 100%;
+}
+
+.div-promo {
+    position: relative;
+}
+
+.img-promo {
+    width: 100%;
+}
+
+.h4-promo {
+    font-size: 20px;
+    color:orangered;
+    background-color: #666;
+    opacity: 0.8;
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+    margin: 0;
+    transition: all 500ms;
+}
+
+.h4-promo:hover {
+    opacity: 1;
+    background-color: red;
+    color: white;
 }
