--- a/public/css/form-styles.css
+++ b/public/css/form-styles.css
@@ -1,13 +1,9 @@
 header {
     padding-bottom: 20px;
-    position: fixed;
-    top: 0;
-    z-index: 100;
 }
 
 .form-registro {
     padding: 25px;
-    margin-top: 194px;
 }
 
 .form-login {
@@ -65,10 +61,18 @@ header {
     box-sizing: border-box;    
 }
 
+.div-radio input {
+    margin-right: 10px;   
+}
+
 .div-checkbox {
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
+}
+
+.div-checkbox input {
+    margin-right: 10px;
 }
 
 .div-checkbox label {
@@ -96,35 +100,13 @@ header {
     padding: 10px;
 }
 
+.div-botones:hover button {
+    background-color:#0022AA;
+}
+
 .div-botones a {
     text-decoration: none;
     color:white;
     width: 100%;
     height: 100%;
-}
-
-.div-promo {
-    position: relative;
-}
-
-.img-promo {
-    width: 100%;
-}
-
-.h4-promo {
-    font-size: 20px;
-    color:orangered;
-    background-color: #666;
-    opacity: 0.8;
-    position: absolute;
-    bottom: 10px;
-    text-align: center;
-    margin: 0;
-    transition: all 500ms;
-}
-
-.h4-promo:hover {
-    opacity: 1;
-    background-color: red;
-    color: white;
 }
