--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="compra-cuotas">
-                <i class="fa-solid fa-hand-holding-dollar"></i>
+                <i class="fa-solid fa-hand-holding-dollar i-manito-pesos"></i>
                 <span>Comprá en cuotas y sin tarjeta de crédito</span>
             </div>
         </div>
@@ -232,28 +232,31 @@
     </main>
 
      <footer>
-        <section>
-            <i class="fa-solid fa-credit-card footer-icon"></i>
-            <h3 class="titulos-footer">Pagá con tarjeta o en efectivo</h3>
-            <p class="textos-footer">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es
-                seguro!</p>
-        </section>
+        <div class="div-footer">
+            <section>
+                <i class="fa-solid fa-credit-card footer-icon"></i>
+                <h3 class="titulos-footer">Pagá con tarjeta o en efectivo</h3>
+                <p class="textos-footer">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es
+                    seguro!</p>
+            </section>
 
-        <section>
-            <i class="fa-solid fa-gift footer-icon"></i>
-            <h3 class="titulos-footer">Envío gratis desde $ 2.500</h3>
-            <p class="textos-footer">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
-                Mercado Puntos.</p>
-        </section>
+            <section>
+                <i class="fa-solid fa-gift footer-icon"></i>
+                <h3 class="titulos-footer">Envío gratis desde $ 2.500</h3>
+                <p class="textos-footer">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
+                    Mercado Puntos.</p>
+            </section>
 
-        <section>
-            <i class="fa-solid fa-user-shield footer-icon"></i>
-            <h3 class="titulos-footer">Seguridad, de principio a fin</h3>
-            <p class="textos-footer">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre
-                protegid@.</p>
-        </section>
+            <section>
+                <i class="fa-solid fa-user-shield footer-icon"></i>
+                <h3 class="titulos-footer">Seguridad, de principio a fin</h3>
+                <p class="textos-footer">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre
+                    protegid@.</p>
+            </section>
+        </div>
 
         <p id="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+        
     </footer>
 </body>
 
