--- a/views/login.html
+++ b/views/login.html
@@ -67,7 +67,7 @@
         
         <a href="#" class="boton-menu"><i class="fa-solid fa-bars"></i></a>
         
-        <img class="banner" src="/images/img-home-banner.jpg" alt="Banner">
+        <!-- <img class="banner" src="/images/img-home-banner.jpg" alt="Banner"> -->
         
     </header>
 
