--- a/views/register.html
+++ b/views/register.html
@@ -25,7 +25,8 @@
 
             <div class="logo-busqueda">
                 
-                <img class="logo" src="/images/logo-mercado-liebre.svg" alt="Logo de ML">        
+                <img class="logo" src="/images/logo-mercado-liebre.svg" alt="Logo de ML">
+                    
                 
                 <form class="form-busqueda">
                     <input class="input-busqueda" type="text" placeholder="Buscar productos, marcas" >
@@ -170,11 +171,11 @@
             </div>
         </form>
 
-        <div class="div-promo">
+        <!-- <div class="div-promo">
             <img src="/images/avion.jpg" class="img-promo">
 
             <h4 class="h4-promo">¡Comprá hoy y participá en un sorteo por 2 pasajes a Miami!</h4>
-        </div>
+        </div> -->
 
     </main>
     
